--- a/Andoku/res/values-de/strings.xml
+++ b/Andoku/res/values-de/strings.xml
@@ -87,12 +87,13 @@
     <string name="html_page_about">about-de.html</string>
     <string name="html_page_help">help-de.html</string>
 
-    <!-- Info/warning messages for "Check Puzzle" -->
+    <!-- Info/warning messages for "Check Puzzle" or when all cells are filled in -->
     <string name="message_computing_solution">Berechne die Lösung. Bitte warten...</string>
     <string name="info_puzzle_ok_1">Alles okay. Ein Feld ist noch auszufüllen.</string>
     <string name="info_puzzle_ok_n">Alles okay. %d Felder sind noch auszufüllen.</string>
     <string name="warn_invalid_puzzle">Dieses Rätsel ist ungültig und kann nicht gelöst werden!</string>
     <string name="warn_puzzle_errors">Das Sudoku-Rätsel hat leider einige Fehler!</string>
+    <string name="info_invalid_solution">Das ist leider nicht die korrekte Lösung! Probieren Sie \'Überprüfen\' im Menü, um zu sehen, wo das Problem liegt.</string>
 
     <!-- Options menu while playing -->
     <string name="menu_check_puzzle">Überprüfen</string>
