French translation by Guillaume Semichon.
git-svn-id: http://andoku.googlecode.com/svn/trunk@350 8b5035ae-46ba-11de-80ae-c1ff141340a0

--- a/Andoku/res/values-fr/strings.xml
+++ b/Andoku/res/values-fr/strings.xml
@@ -93,7 +93,7 @@
     <string name="info_puzzle_ok_n">Pas d\'erreurs. Plus que %d cellules.</string>
     <string name="warn_invalid_puzzle">Cette grille est invalide et ne peut être résolue.</string>
     <string name="warn_puzzle_errors">Vous avez fait des erreurs.</string>
-    <string name="info_invalid_solution">TODO: Sorry, that is not the correct solution! Try \'Check Puzzle\' from the menu to see where the problem lies.</string>
+    <string name="info_invalid_solution">Désolé, vous n\'avez pas trouvé la solution ! Vérifiez la grille (dans le menu) pour voir d\'où vient le problème.</string>
 
     <!-- Options menu while playing -->
     <string name="menu_check_puzzle">Vérifier la grille</string>
