--- a/Andoku/res/values-de/strings.xml
+++ b/Andoku/res/values-de/strings.xml
@@ -93,7 +93,7 @@
     <string name="info_puzzle_ok_n">Alles okay. %d Felder sind noch auszufüllen.</string>
     <string name="warn_invalid_puzzle">Dieses Rätsel ist ungültig und kann nicht gelöst werden!</string>
     <string name="warn_puzzle_errors">Das Sudoku-Rätsel hat leider einige Fehler!</string>
-    <string name="info_invalid_solution">Das ist leider nicht die korrekte Lösung! Probieren Sie \'Überprüfen\' im Menü, um zu sehen, wo das Problem liegt.</string>
+    <string name="info_invalid_solution">Das ist leider nicht die korrekte Lösung!\n\nProbieren Sie \'Überprüfen\' im Menü, um zu sehen, wo das Problem liegt.</string>
 
     <!-- Options menu while playing -->
     <string name="menu_check_puzzle">Überprüfen</string>
