--- a/Andoku/res/values-fr/strings.xml
+++ b/Andoku/res/values-fr/strings.xml
@@ -74,6 +74,9 @@
     <string name="message_folder_exists">Impossible de renommer le dossier car un dossier \'%s\' existe déjà !</string>
     <string name="dialog_reset_puzzle">Réinitialiser la grille ?</string>
     <string name="message_reset_puzzle">Confirmez-vous la réinitialisation de la grille et de son chrono ?</string>
+    <string name="dialog_reset_all_puzzles">Réinitialiser toutes les grilles ?</string>
+    <string name="message_reset_all_puzzles_in_variation">Confirmez-vous la réinitialisation de TOUTES les grilles de cette variation de jeu ?</string>
+    <string name="message_reset_all_puzzles_in_folder">Confirmez-vous la réinitialisation de TOUTES les grilles de ce dossier ?</string>
 
     <!-- Captions for the error page -->
     <string name="error_title_io_error">I/O Error</string>
@@ -99,6 +102,7 @@
     <string name="menu_check_puzzle">Vérifier la grille</string>
     <string name="menu_pause">Pause</string>
     <string name="menu_reset_puzzle">Réinitialisation de la grille</string>
+    <string name="menu_reset_all_puzzles">Réinitialiser toutes les grilles</string>
     <string name="menu_resume">Reprendre</string>
     <string name="menu_eliminate_values">Effacer ce chiffre</string>
     <string name="menu_settings">Paramètres</string>
