Use 'Effacer des chiffres' for Eliminate values in French (suggested by Guillaume Semichon).
git-svn-id: http://andoku.googlecode.com/svn/trunk@361 8b5035ae-46ba-11de-80ae-c1ff141340a0

--- a/Andoku/res/values-fr/strings.xml
+++ b/Andoku/res/values-fr/strings.xml
@@ -104,7 +104,7 @@
     <string name="menu_reset_puzzle">Réinitialisation de la grille</string>
     <string name="menu_reset_all_puzzles">Réinitialiser toutes les grilles</string>
     <string name="menu_resume">Reprendre</string>
-    <string name="menu_eliminate_values">Effacer ce chiffre</string>
+    <string name="menu_eliminate_values">Effacer des chiffres</string>
     <string name="menu_settings">Paramètres</string>
 
     <!-- Messages for congratulations/statistics at end of game -->
