--- a/Andoku/res/values-fr/strings.xml
+++ b/Andoku/res/values-fr/strings.xml
@@ -145,7 +145,7 @@
     <string name="prompt_spinner_difficulty">Choisir un niveau de difficulté</string>
     <string name="mini_stats_0">(Vous n\'avez pas encore résolu de grille dans ce niveau de difficulté.)</string>
     <!-- next line uses 'NO-BREAK SPACE' (U+00A0) to avoid undesired line breaks -->
-    <string name="mini_stats_n">(Grilles résolues : %d, temps moyen : %s, meilleur temps : %s)</string>
+    <string name="mini_stats_n">(Grilles\u00A0résolues\u00A0:\u00A0%d, temps\u00A0moyen\u00A0:\u00A0%s, meilleur\u00A0temps\u00A0:\u00A0%s)</string>
 
     <!-- Declares a permission group and a permission that allows external applications to import puzzles into Andoku -->
     <string name="permgroup_label_andoku">Andoku</string>
