Included a notice that Guillaume translated these files
git-svn-id: http://andoku.googlecode.com/svn/trunk@368 8b5035ae-46ba-11de-80ae-c1ff141340a0

--- a/Andoku/res/values-fr/strings.xml
+++ b/Andoku/res/values-fr/strings.xml
@@ -19,6 +19,8 @@
   along with Andoku.  If not, see <http://www.gnu.org/licenses/>.
 -->
 
+<!-- Translation by Guillaume Semichon -->
+
 <resources>
     <!-- Application name -->
     <string name="app_name">Andoku</string>
