--- a/Andoku/res/values-fr/strings.xml
+++ b/Andoku/res/values-fr/strings.xml
@@ -73,6 +73,7 @@
     <string name="message_delete_folder">Le dossier \'%s\' n\'est pas vide. Confirmez-vous sa suppression ?</string>
     <string name="dialog_rename_folder">Renommer le dossier</string>
     <string name="message_rename_folder">Nouveau nom pour \'%s\' :</string>
+    <string name="message_invalid_folder_name">TBD: Sorry, a folder name may not contain a slash character or be empty!</string>
     <string name="message_folder_exists">Impossible de renommer le dossier car un dossier \'%s\' existe déjà !</string>
     <string name="dialog_reset_puzzle">Réinitialiser la grille ?</string>
     <string name="message_reset_puzzle">Confirmez-vous la réinitialisation de la grille et de son chrono ?</string>
