--- a/Andoku/res/values/strings.xml
+++ b/Andoku/res/values/strings.xml
@@ -71,6 +71,7 @@
     <string name="message_delete_folder">Folder \'%s\' is not empty. Do you really want to delete it?</string>
     <string name="dialog_rename_folder">Rename Folder</string>
     <string name="message_rename_folder">New name for \'%s\':</string>
+    <string name="message_invalid_folder_name">Sorry, a folder name may not contain a slash character or be empty!</string>
     <string name="message_folder_exists">Could not rename folder because another folder named \'%s\' already exists!</string>
     <string name="dialog_reset_puzzle">Reset Puzzle?</string>
     <string name="message_reset_puzzle">Do you really want to clear the current puzzle and reset the timer?</string>
