--- a/Andoku/res/values-it/strings.xml
+++ b/Andoku/res/values-it/strings.xml
@@ -64,17 +64,22 @@
     <string name="button_clear">C</string>
     <string name="button_invert">Inv</string>
 
+    <!-- Menu entries for the "Imported Folders" activity -->
+    <string name="menu_create_folder">TBD: Create New Folder</string>
+
     <!-- Context menu entries for the "Imported Folders" activity -->
     <string name="context_menu_delete_folder">Cancella Cartella</string>
     <string name="context_menu_rename_folder">Rinomina Cartella</string>
 
     <!-- Captions and messages for confirmation dialogs -->
+    <string name="dialog_create_folder">TBD: Create New Folder</string>
+    <string name="message_create_folder">TBD: New folder name:</string>
     <string name="dialog_delete_folder">Cartella Cartella</string>
     <string name="message_delete_folder">La cartella  \'%s\' non è vuota. Vuoi davvero cancellarla?</string>
     <string name="dialog_rename_folder">Rinomiana Cartella</string>
     <string name="message_rename_folder">Nuovo nome per \'%s\':</string>
     <string name="message_invalid_folder_name">TBD: Sorry, a folder name may not contain a slash character or be empty!</string>
-    <string name="message_folder_exists">Non puoi rinominare la cartella perchè il nome \'%s\' è già usato da un altra cartella!</string>
+    <string name="message_folder_exists">TBD: Could not create or rename folder because another folder named \'%s\' already exists!</string>
     <string name="dialog_reset_puzzle">Resetta Puzzle?</string>
     <string name="message_reset_puzzle">Vuoi davvero cancellare il puzzle corrente e resettare il timer?</string>
     <string name="dialog_reset_all_puzzles">Resetta Tutti i Puzzle?</string>
