--- a/Andoku/res/values-it/strings.xml
+++ b/Andoku/res/values-it/strings.xml
@@ -109,9 +109,9 @@
 
     <!-- Messages for congratulations/statistics at end of game -->
     <string name="message_congrats">&lt;b&gt;Congratulazioni, hai risolto questo puzzle!&lt;/b&gt;</string>
-    <string name="message_statistics_title_assets">Statistiche per &lt;i&gt;%s (%s)&lt;/i&gt;:</string>
+    <string name="message_statistics_title_assets">Statistiche per &lt;i&gt;%1$s (%2$s)&lt;/i&gt;:</string>
     <string name="message_statistics_title_db">Statistiche per cartella &lt;i&gt;%s&lt;/i&gt;:</string>
-    <string name="message_statistics_details">Puzzle risolti: %d&lt;br/&gt;Tempo medio: %s&lt;br/&gt;Miglior tempo: %s</string>
+    <string name="message_statistics_details">Puzzle risolti: %1$d&lt;br/&gt;Tempo medio: %2$s&lt;br/&gt;Miglior tempo: %3$s</string>
 
     <!-- Folder cannot be opened because it's empty -->
     <string name="message_empty_folder">La cartella \'%s\' è vuota.</string>
@@ -145,7 +145,7 @@
     <string name="prompt_spinner_difficulty">Scegli livello di difficoltà</string>
     <string name="mini_stats_0">(Nessun puzzle già risolto.)</string>
     <!-- next line uses 'NO-BREAK SPACE' (U+00A0) to avoid undesired line breaks -->
-    <string name="mini_stats_n">(Puzzle\u00A0risolti:\u00A0%d, tempo\u00A0medio:\u00A0%s, tempo\u00A0migliore:\u00A0%s)</string>
+    <string name="mini_stats_n">(Puzzle\u00A0risolti:\u00A0%1$d, tempo\u00A0medio:\u00A0%2$s, tempo\u00A0migliore:\u00A0%3$s)</string>
 
     <!-- Declares a permission group and a permission that allows external applications to import puzzles into Andoku -->
     <string name="permgroup_label_andoku">Andoku</string>
