--- a/Andoku/res/values/strings.xml
+++ b/Andoku/res/values/strings.xml
@@ -107,9 +107,9 @@
 
     <!-- Messages for congratulations/statistics at end of game -->
     <string name="message_congrats">&lt;b&gt;Congratulations, you have solved this puzzle!&lt;/b&gt;</string>
-    <string name="message_statistics_title_assets">Statistics for &lt;i&gt;%s (%s)&lt;/i&gt;:</string>
+    <string name="message_statistics_title_assets">Statistics for &lt;i&gt;%1$s (%2$s)&lt;/i&gt;:</string>
     <string name="message_statistics_title_db">Statistics for folder &lt;i&gt;%s&lt;/i&gt;:</string>
-    <string name="message_statistics_details">Puzzles solved: %d&lt;br/&gt;Average time: %s&lt;br/&gt;Fastest time: %s</string>
+    <string name="message_statistics_details">Puzzles solved: %1$d&lt;br/&gt;Average time: %2$s&lt;br/&gt;Fastest time: %3$s</string>
 
     <!-- Folder cannot be opened because it's empty -->
     <string name="message_empty_folder">Folder \'%s\' is empty.</string>
@@ -143,7 +143,7 @@
     <string name="prompt_spinner_difficulty">Choose level of difficulty</string>
     <string name="mini_stats_0">(No puzzles solved yet.)</string>
     <!-- next line uses 'NO-BREAK SPACE' (U+00A0) to avoid undesired line breaks -->
-    <string name="mini_stats_n">(Puzzles\u00A0solved:\u00A0%d, average\u00A0time:\u00A0%s, fastest\u00A0time:\u00A0%s)</string>
+    <string name="mini_stats_n">(Puzzles\u00A0solved:\u00A0%1$d, average\u00A0time:\u00A0%2$s, fastest\u00A0time:\u00A0%3$s)</string>
 
     <!-- Declares a permission group and a permission that allows external applications to import puzzles into Andoku -->
     <string name="permgroup_label_andoku">Andoku</string>
